Alps: Fix header icon hover bug on mobile devices

--- a/projects/alps/css/style.css
+++ b/projects/alps/css/style.css
@@ -87,7 +87,7 @@ header nav a:hover {
 
 .header-icon {
     position: absolute;
-    right: -20px;
+    right: 0px;
     opacity: 0;
     transition: .3s ease-out;
     transform: scale(0);
